# blended-template

./: .example.env  .gitignore  README.md  package.json  tsconfig.json
js-client/: package-lock.json  package.json  rust.js  solidity.js
rust/: Cargo.toml  lib.rs  lib.wasm  lib.wat
scripts/: call-rust-contract.ts
solidity/src/deployConstructor/: FluentSdkRustTypesTest.txt
src/: FluentEvmRustTypes.sol  FluentSolRustTypesTest.sol
src/power-calculator/: .gitignore
src/rust-evm-types/: Cargo.toml
src/rust-evm-types/src/: lib.rs
src/rust-types-test/: Cargo.toml
src/solidityConstructor/: FluentEvmRustTypes.txt
test/: FluentEvmRustTypesTest.t.sol
